fix homepage layout spacing

--- a/pomo-react/src/styles/App.scss
+++ b/pomo-react/src/styles/App.scss
@@ -10,14 +10,10 @@
   justify-content: space-around;
 }
 
-// #root {
-//   height: 25%;
-// }
-
 .main-container {
   font-family: $logo-font;
   display: flex;
-  height: 100%;
+  height: 80%;
   justify-content: space-evenly;
   background-color: #feded7;
   padding-top: 50px;
@@ -58,6 +54,7 @@
 }
 
 .egg {
+  margin-top: 8rem;
   animation: wiggle 1s linear infinite;
   :after {
     animation: anti-wiggle 1s linear infinite;
